RESOLVED FIXED272613
WebGPU.h has a naked `bool`, fails to build in some contexts
https://bugs.webkit.org/show_bug.cgi?id=272613
Summary WebGPU.h has a naked `bool`, fails to build in some contexts
Tim Horton
Reported 2024-04-12 18:02:36 PDT
WebGPU.h has a naked `bool`, fails to build in some contexts
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-12 18:02:52 PDT
Tim Horton
Comment 2 2024-04-12 18:03:53 PDT
EWS
Comment 3 2024-04-12 18:17:05 PDT
Committed 277446@main (6527b02790a7): <https://commits.webkit.org/277446@main> Reviewed commits have been landed. Closing PR #27210 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.