WebGPU.h has a naked `bool`, fails to build in some contexts https://bugs.webkit.org/show_bug.cgi?id=272613 rdar://126384591

Reviewed by Mike Wyrzykowski.

* Source/WebGPU/WebGPU/WebGPU.h:

Canonical link: https://commits.webkit.org/277446@main